bug fix: suggestions are scrollable on touch now.  Hide default scrollbars.

--- a/common/css/style.css
+++ b/common/css/style.css
@@ -50,3 +50,8 @@ span.largeicon {
 .page-header {
     border-bottom-color: #22B10C;
 }
+
+
+::-webkit-scrollbar {
+    display: none;
+}
